fix(CanlendarPicker): component freezes when the time interval is too large, using virtual scrolling optimization

--- a/src/components/calendar-picker-view/calendar-picker-view.less
+++ b/src/components/calendar-picker-view/calendar-picker-view.less
@@ -144,4 +144,11 @@
       text-align: center;
     }
   }
+
+  &-no-scrollbar {
+    scrollbar-width: none; /* firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
